--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "frontend",
+  "homepage": "https://hdror.github.io/Airbnb/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
