--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "frontend",
-  "homepage": "https://hdror.github.io/Airbnb/",
+  "name": "airbnb",
+  "homepage": "https://hdror.github.io/airbnb/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,7 +10,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.3"
+    "react-select": "^5.2.1",
+    "redux": "^4.1.2",
+    "socket.io-client": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "web-vitals": "^2.1.3",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
