--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "airbnb",
-  "homepage": "https://hdror.github.io",
+  "homepage": "https://hdror.github.io/airbnb/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
