--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "node-sass": "^7.0.1",
     "rc-menu": "^9.3.1",
+    "rc-slider": "^9.7.5",
     "react": "^17.0.2",
     "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
@@ -24,6 +25,7 @@
     "react-slick": "^0.28.1",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "rheostat": "^4.1.1",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.2.0",
     "web-vitals": "^2.1.3"
