--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-slick": "^0.28.1",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "require": "^2.4.20",
     "rheostat": "^4.1.1",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.2.0",
@@ -44,6 +45,8 @@
       "react-app/jest"
     ]
   },
+
+
   "browserslist": {
     "production": [
       ">0.2%",
