--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.25.0",
     "node-sass": "^7.0.1",
     "rc-menu": "^9.3.1",
     "rc-slider": "^9.7.5",
@@ -45,8 +46,6 @@
       "react-app/jest"
     ]
   },
-
-
   "browserslist": {
     "production": [
       ">0.2%",
