--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^17.0.2",
     "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
+    "react-google-charts": "^4.0.0",
     "react-google-login": "^5.2.2",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.6",
